--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 
                 <li>1 point per hit,minus 1 point per miss.</li>
             </ol>
-   
+        </p>
+    <div id=¨footer¨>
+    <a href=¨./articles/¨>this is a link for my daily article of my learning experience of c++</a>
     </div>
 </body>
 </html>
