--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>1 point per hit,minus 1 point per miss.</li>
             </ol>
         </p>
-    <div id=¨footer¨>
+    <div id=¨foote¨>
     <a href=¨http://haungjundashuaige.me/articles/¨>this is a link for my daily article of my learning experience of c++</a>
     </div>
 </body>
