--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li>1 point per hit,minus 1 point per miss.</li>
             </ol>
         </p>
-    <div id=¨foote¨>
-    <a href=¨http://haungjundashuaige.me/articles/¨>this is a link for my daily article of my learning experience of c++</a>
+    <div id="footer">
+    <a href="./articles/">this is a link for my daily article of my learning experience of c++</a>
     </div>
 </body>
 </html>
