--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./game.js"></script>
+    <script>
+        document.write('<script src="http://' + (location.host || '${1:localhost}').split(':')[0] + ':${2:8080}/livereload.js?snipver=1"></' + 'script>')
+    </script>
 </head>
 <body>
     <div id="main">
